<resources>
    <string name="app_name">Money Lender</string>
    <string name="money">Money</string>
    <string name="lender">Lender</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="start">iniciar</string>
    <string name="question_register">¿Aún no tienes cuenta?</string>
    <string name="register">Registrate</string>
    <string name="loading">Cargando</string>
    <string name="add_contact">Agregar contacto</string>
    <string name="add_code">Ingresa codigo</string>
    <string name="fab_add_contact">fab_add_contact</string>
    <string name="without_contacts">Aún no tienes contactos agregados</string>
    <string name="error_text">Error al intentar obtener datos</string>
    <string name="error_code">"Codigo invalido"</string>
    <string name="tittle_request">Solicitudes recibidas:</string>
    <string name="no_requests">Sin solicitudes</string>

    <string name="amount_with_sign">$%1$s</string>
    <string name="progress_pay_out">Pagado %1$s</string>
    <string name="pay_out_the_day">Pagado el dia</string>
    <string name="to_accept">Aceptar</string>
    <string name="pending">Pendiente</string>
    <string name="is_paid_out">Pago liquidado</string>
    <string name="amount_zero">$0.0</string>
    <string name="three_dots">...</string>
    <string name="date_format">--/--/----</string>

</resources>